Replaced `Collectors.toList()` with `toList()` calls.