@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2024 Alexandr Evstigneev
+ * Copyright 2015-2025 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -149,7 +149,7 @@ public class Perl5SdkConfigurable implements UnnamedConfigurable, ProjectJdkTabl
         };
         hostActionGroup.getTemplatePresentation().setIcon(hostHandler.getIcon());
         return hostActionGroup;
-    }).collect(Collectors.toList());
+      }).toList();
 
     if (groups.size() == 1) {
       for (AnAction action : groups.getFirst().getChildren(null)) {
